[package]
name = "cortex-r"
version = "0.2.0"
authors = ["Roberto Valenzuela <valenzuelarober@gmail.com"]
description = "Low level access to Cortex-R processors"
documentation = "https://docs.rs/cortex-r"
homepage = "https://github.com/roemvaar/cortex-r"
repository = "https://github.com/roemvaar/cortex-r"
readme = "README.md"
keywords = ["arm", "aarch64", "cortex-r", "register", "peripheral"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2018"
